Fix multiplied scrollbars

--- a/less/actors.less
+++ b/less/actors.less
@@ -894,7 +894,6 @@
 
     .inventory-list {
       height: 100%;
-      overflow-y: scroll;
 
       input[type="checkbox"] {
         height: 18px;
